--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
   </header>
   <!-- Main content -->
+  
   <div class="container">
 
     <div class="picture">
@@ -53,7 +54,7 @@
   </div>
 
   <div class="under-content">
-    <img src="./images/image-about-dark.jpg" alt="">
+    <img class="left-img" src="./images/image-about-dark.jpg" alt="">
     <div class="under-text">
       <h1>About our furniture</h1>
       <p>Our multifunctional collection blends design and function to suit your individual taste.
@@ -61,7 +62,7 @@
         inspires you. Find the furniture pieces you need, from traditional to contemporary styles
         or anything in between. Product specialists are available to help you create your dream space.</p>
     </div>
-    <img src="./images/image-about-light.jpg" alt="">
+    <img class="right-img" src="./images/image-about-light.jpg" alt="">
   </div>
   
 
@@ -92,6 +93,8 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.-->
+
+    <script src="app.js"></script>
   </div>
 </body>
 </html>
